# redisgraph-cplusplus

./: CMakeLists.txt  LICENSE  README.md  Record.cpp  Record.h  RedisGraphContext.cpp  RedisGraphContext.h  RedisGraphContextGenerator.cpp  RedisGraphContextGenerator.h  RedisGraphTransaction.cpp  RedisGraphTransaction.h  Statistics.cpp  Statistics.h  UML.mdj  c17_10.json  main.cpp
BoostGraphExample/: CMakeLists.txt  CustomNodeExample.cpp  Node.cpp  OwnClassExample.cpp  main.cpp
boostGraphRef/: Node.h  ShortestPathExample.cpp  main.cpp
graph_entities/: Edge.cpp  Edge.h  GraphEntity.cpp  GraphEntity.h  Node.cpp  Node.h  Path.cpp  Path.h  Property.cpp  Property.h
impl/: utils.cpp  utils.h
impl/api/: AbstractRedisGraph.cpp  AbstractRedisGraph.h  ContextedRedisGraph.cpp  ContextedRedisGraph.h  RedisGraph.cpp  RedisGraph.h  RedisGraphCacheHolder.cpp  RedisGraphCacheHolder.h  RedisGraphCommand.cpp  RedisGraphCommand.h  RedisGraphTransaction.cpp  RedisGraphTransaction.h
impl/graph_cache/: GraphCache.cpp  GraphCache.h  GraphCacheList.cpp  GraphCacheList.h  RedisGraphCaches.cpp  RedisGraphCaches.h
impl/resultset/: Header.cpp  Header.h  RecordImpl.cpp  RecordImpl.h  ResultSet.cpp  ResultSet.h  ResultSetScalarTypes.cpp  ResultSetScalarTypes.h  StatisticsImp.cpp  StatisticsImp.h
test/: main.cpp  main.h
